--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					
 					<section>						
 						<h4>Novo, não usual e experimental</h4><br>
-						<h4 class="fragment">Negócios tem um alto apetitie por risco</h4><br>
+						<h4 class="fragment">Negócios tem um alto apetite por risco</h4><br>
 						<h4 class="fragment">Desenvolvem um novo processo de mudança</h4><br>
 						<h4 class="fragment">O próprio time opera e suporta o sistema.</h4>
 					</section>
