--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					
 					<section>
 						<h4>Onda de corte de despesas</h4><br>
-						<h4 class="fragment">Não conseguem operar a infraetrutura e o BD</h4><br>
+						<h4 class="fragment">Não conseguem operar a infraestrutura e o BD</h4><br>
 						<h4 class="fragment">Operações da TI assume</h4><br>
 						<h4 class="fragment">Servidores são retirados da Amazon</h4><br>
 						<h4 class="fragment">Time de DBAs passa a manter o BD</h4>
