--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 					<h1>Fishbowl</h1>					
 					
 					<!--
-							Realizar uma votação para termos uma senteça sobre a TI Bimodal.
+							Realizar uma votação para termos uma sentença sobre a TI Bimodal.
 					-->
 				
 				</section>
