--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 					
 					<section>	
 						<h2 style="text-align: left;">Acusação</h2><br>
-						<blockquote>Bimodal é um modelo falho que sistemas de software devem ser divididos em duas categorias distintas para gerenciamento e controle.</blockquote>
+						<blockquote>
+TI Bimodal é uma falha noção de que sistemas de software devem ser divididos entre duas categorias diferentes para gestão e controle.</blockquote>
 						<br>
 						<p style="text-align: right;">Martin Fowler</p>
 					</section>
