--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@ TI Bimodal é uma falha noção de que sistemas de software devem ser divididos 
 				
 					<section>
 						Case Boston
-						<h4 class="fragment">Ambiente seguro para colaboração</h4><br>
-						<h4 class="fragment">Inovação e execução simultânea</h4><br>
-						<h4 class="fragment">Desafiar e complementar o que já está em uso</h4><br>
-						<h4 class="fragment">Não é isolado! </h4><br>
-						<h4 class="fragment">Slack time para explorar ideias</h4><br>
-						<h4 class="fragment">Exemplo: Integração de sistemas de CRM + Citizens Connect</h4><br>
-						<h4 class="fragment">Pilotos e participantes externos com expertise</h4><br>
+						<h5 class="fragment">Ambiente seguro para colaboração</h5><br>
+						<h5 class="fragment">Inovação e execução simultânea</h5><br>
+						<h5 class="fragment">Desafiar e complementar o que já está em uso</h5><br>
+						<h5 class="fragment">Não é isolado! </h5><br>
+						<h5 class="fragment">Slack time para explorar ideias</h5><br>
+						<h5 class="fragment">Exemplo: Integração de sistemas de CRM + Citizens Connect</h5><br>
+						<h5 class="fragment">Pilotos e participantes externos com expertise</h5>
 					</section>
 				
 				<!-- Defesa
