--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ TI Bimodal é uma falha noção de que sistemas de software devem ser divididos 
 					</section>
 					
 					<section>
-						<h2>Case Boston (cont..)</h2>
+						<h2>Case Boston</h2>
 							<h5 class="fragment">Não é isolado!</h5>
 							<h5 class="fragment">Slack time para explorar ideias</h5>
 							<h5 class="fragment">Pilotos e participantes externos com expertise</h5>
