--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ TI Bimodal é uma falha noção de que sistemas de software devem ser divididos 
 					</section>
 					
 					<section>
-						TI Bimodal não é bala de prata, menos ainda para transformação nem gestão da mudança!
+						TI Bimodal não é bala de prata, menos ainda para transformação ou gestão da mudança!
 					</section>
 					
 						<!-- Tempo 3 min / Defesa					
